--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Bleachers</title>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js'></script>
 		<script src='https://rawgit.com/mrdoob/three.js/dev/examples/js/loaders/GLTFLoader.js'></script>
-		<script src="http://sdk.altvr.com/libs/altspace.js/0.28.1/altspace.min.js"></script>
+		<script src="https://sdk.altvr.com/libs/altspace.js/2.4.3/altspace.min.js"></script>
 	</head>
 	<body style='height: 100%; margin: 0'>
 		<script>
